[package]
name = "nom-greedyerror"
version = "0.3.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-greedyerror"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Custom error type to take a deepest error"
edition = "2018"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file = "README.md", search = "nom-greedyerror = \"[a-z0-9\\.-]+\"", replace = "nom-greedyerror = \"{{version}}\""},
    {file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/nom-greedyerror/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[dependencies]
nom5        = {version = "5", package = "nom"}
nom6        = {version = "6", package = "nom"}
nom_locate1 = {version = "1", package = "nom_locate"}
nom_locate2 = {version = "2", package = "nom_locate"}
nom_locate3 = {version = "3", package = "nom_locate"}
